--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         </ul>
 
         <button id="darkModeBtn" class="dark-btn">🌙</button>
+        <button id="menuBtn" class="menu-btn">☰</button>
+
     </nav>
 
     <!-- HERO SECTION -->
