--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portofolio Galij - Web Admin</title>
-    <link rel="stylesheet" href="asset/css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
 </head>
 
 <body>
@@ -109,7 +109,8 @@
     <!-- BACK TO TOP -->
     <div id="backToTop">↑</div>
 
-    <script src="asset/js/script.js"></script>
+    <script src="./js/script.js"></script>
 
 </body>
 </html>
+
