--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
 <body>
 
     <!-- NAVBAR -->
-    <nav>
-        <h2>Galij <span class="sub-title">| Sistem Informasi</span></h2>
+  <nav>
+  <h2>Galih <span class="sub-title">| Sistem Informasi</span></h2>
 
-        <ul>
-            <li><a href="#tentang">Tentang</a></li>
-            <li><a href="#keahlian">Keahlian</a></li>
-            <li><a href="#project">Project</a></li>
-            <li><a href="#kontak">Kontak</a></li>
-        </ul>
+  <ul id="menuList">
+    <li><a href="#tentang">Tentang</a></li>
+    <li><a href="#keahlian">Keahlian</a></li>
+    <li><a href="#project">Project</a></li>
+    <li><a href="#kontak">Kontak</a></li>
+  </ul>
 
-        <button id="darkModeBtn" class="dark-btn">🌙</button>
-        <button id="menuBtn" class="menu-btn">☰</button>
+  <button id="darkModeBtn" class="dark-btn">🌙</button>
+  <button id="menuBtn" class="menu-btn">☰</button>
+</nav>
 
-    </nav>
 
     <!-- HERO SECTION -->
     <section class="hero">
@@ -113,4 +113,5 @@
 
 </body>
 </html>
+
 
