--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portofolio Galij - Web Admin</title>
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="asset/css/style.css" />
 </head>
 
 <body>
 
     <!-- NAVBAR -->
-  <nav>
+   <nav>
   <h2>Galih <span class="sub-title">| Sistem Informasi</span></h2>
 
   <ul id="menuList">
@@ -109,9 +109,7 @@
     <!-- BACK TO TOP -->
     <div id="backToTop">↑</div>
 
-    <script src="./js/script.js"></script>
+    <script src="asset/js/script.js"></script>
 
 </body>
 </html>
-
-
