--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portofolio Galij - Web Admin</title>
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="Asset/css/style.css" />
 </head>
 
 <body>
@@ -113,4 +113,5 @@
 
 </body>
 </html>
+
 
