--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
 
         <div class="hero-img">
-            <img src="img/profile.jpg" alt="Galij" />
+            <img src="./img/saya.png" alt="Galij" />
         </div>
     </section>
 
@@ -113,3 +113,4 @@
 
 </body>
 </html>
+
