--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
 
         <div class="hero-img">
-            <img src="./img/saya.png" alt="Galij" />
+            <img src="./image/saya/png" alt="Galij" />
         </div>
     </section>
 
@@ -113,4 +113,5 @@
 
 </body>
 </html>
+
 
