--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
 
         <div class="hero-img">
-            <img src="./image/saya.png" alt="Galij" />
+            <img src="asset/image/saya.png" alt="Galij" />
         </div>
     </section>
 
@@ -113,6 +113,7 @@
 
 </body>
 </html>
+
 
 
 
