--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
 
             <div class="hero-img">
-                <img src="../assets/img/galij.png" alt="Galih" />
+                <img src="./assets/img/galij.png" alt="Galih" />
             </div>
         </section>
 
@@ -137,4 +137,5 @@
 
     </body>
     </html>
+
 
