--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             </div>
 
             <div class="hero-img">
-                <img src="./assets/img/galij.png" alt="Galih" />
-            </div>
+    <img src="asset/img/galij.png" alt="Galih" />
+</div>
         </section>
 
         <!-- TENTANG -->
@@ -137,5 +137,6 @@
 
     </body>
     </html>
+
 
 
