--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
 
             <div class="hero-img">
-    <img src="asset/img/galij.png" alt="Galih" />
+    <img src="./img/galij.png" alt="Galih" />
 </div>
         </section>
 
@@ -137,6 +137,7 @@
 
     </body>
     </html>
+
 
 
 
