--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
     <div class="gallery">
 
-        <a href="https://github.com/USERNAME/REPO1" target="_blank" class="gallery-item">
+        <a href="https://galihadn.github.io/Landing-page/" target="_blank" class="gallery-item">
             <img src="asset/image/d.png" alt="Website Admin CRUD" />
             <h3>Landing Page</h3>
           
@@ -136,6 +136,7 @@
 
     </body>
     </html>
+
 
 
 
