--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             
         </a>
 
-        <a href="https://github.com/USERNAME/REPO3" target="_blank" class="gallery-item">
+        <a href="https://galihadn.github.io/Artikel-Tawangmangu/" target="_blank" class="gallery-item">
             <img src="asset/image/tawa.png" alt="Mini Dashboard" />
             <h3>Artikel</h3>
          
@@ -136,6 +136,7 @@
 
     </body>
     </html>
+
 
 
 
