--- a/index.html
+++ b/index.html
@@ -133,9 +133,12 @@
         <div id="backToTop">↑</div>
 
         <script src="asset/js/script.js"></script>
-
+ <footer>
+      <p>© 2025 galij. All rights reserved.</p>
+    </footer>
     </body>
     </html>
+
 
 
 
